--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,6 +12,7 @@
             <p id="demo"></p>
             <p id="demo2"></p>
             <p id="demo2">Cambios de prueba en GitHub</p>
+             <p id="demo2">Cambios de prueba en GitHub2</p>
              
         </div>
              
